<resources>
    <string name="app_name">ERP Solution</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="MCERP">MobileComm</string>
    <string name="MobComm">MobileComm Professionals,Inc.</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="version">v1</string>
    <string name="leave_report">Leave Report</string>
    <string name="hr_policies">Hr Policies</string>
    <string name="time_sheet_portal">Time Sheet</string>
    <string name="aboutus">AboutUs</string>
    <string name="logout">Logout</string>
    <string name="accept_asset">Accept Asset</string>
    <string name="office">Office</string>
    <string name="leavetype">Leave Type</string>
    <string name="halfday">Half Day</string>
    <string name="leavefrom">Leave From*</string>
    <string name="leaveto">Leave To*</string>
    <string name="reason">Reason*</string>
    <string name="applyleave">Apply Leave</string>
    <string name="proceed">Proceed</string>
    <string name="none"></string>
    <string name="user_signintext">Sign In</string>
    <string name="cancel_text">Cancel</string>
    <string name="time_set">Set time</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time : </string>
    <string name="manager">Manager</string>
    <string name="other_dep">CEO/HR/FIN</string>
    <string name="headoffice">Head Office</string>
    <string name="projectlocation">On Project Location</string>
    <string name="fullday">Full Day</string>
    <string name="first_half">First Half</string>
    <string name="second_half">Second Half</string>
    <string name="timesheet_approve">Timesheet Approve</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="activity">Activity</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="no_record">No Record</string>
    <string name="for_the_month">For the Month: </string>
     <string name="for_the_cost_month"> Month </string>
    <string name="month">Month</string>
    <string name="emp_name">Emp Name</string>
    <string name="project">Project</string>
    <string name="project_type">Project Type</string>
    <string name="project_start">Project Start</string>
    <string name="location">Location</string>
    <string name="timesheetstart">TimeSheetStart</string>
    <string name="nod">NOD</string>
    <string name="textview">TextView</string>
    <string name="approve_leave">Approve Leave</string>
    <string name="submit">Submit</string>
    <string name="project_cost_report">Project Cost Report</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="circle">Circle</string>
    <string name="leave_from">Leave From</string>
    <string name="leave_to">Leave To</string>
    <string name="type">Type</string>
    <string name="send">Send</string>
    <string name="reset">Reset</string>
    <string name="project_detail">Project Detail</string>
    <string name="project_manager">Project Manager</string>
    <string name="on_project">On Project</string>
    <string name="any_requests">Any Requests</string>
    <string name="leavesheet_request">LeaveSheet Request</string>
    <string name="timesheet_request">Timesheet Request</string>
    <string name="training_request">Training Request</string>
    <string name="assets_information">Assets Information</string>
    <string name="total_assets">Total Assets</string>
    <string name="total_pending_assets">Total Pending Assets</string>
    <string name="assets_pending_from_admin">Assets Pending From Admin</string>
    <string name="assets_pending_from_employee">Assets Pending From Employee</string>
    <string name="for_the_year">For the Year</string>
    <string name="month_year">Month</string>
    <string name="earned_leave">Earned Leave</string>
    <string name="carry_forward">Carry Forward</string>
    <string name="leave_in_hand">Leave In Hand</string>
    <string name="leave_taken">Leave Taken</string>
    <string name="pending_request">Pending Request</string>
    <string name="forward">Forward</string>
    <string name="search">Search</string>
    <string name="sign_in">Sign In</string>
    <string name="cancle">Cancle</string>
    <string name="home">Home</string>
    <string name="generate_timesheet">Generate Timesheet</string>
    <string name="month_year_new">Month Year:-</string>
    <string name="may_2015">May-2015</string>
    <string name="leave_holidays">Leave/Holidays</string>
    <string name="da">DA</string>
    <string name="mobilecomm_professionals_inc">MobileComm Professionals,Inc.</string>
    <string name="view_timesheet">View Timesheet</string>
    <string name="view_timesheet_for">View Timesheet For</string>
    <string name="saved">Saved</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="now_row_found.">No Row Found.</string>
    <string name="scanning">Scanning(â€¦, &#8230;)</string>
    <string name="scan">Scan</string>
    <string name="empname">empname</string>
    <string name="pending_assets">Pending Assets</string>
    <string name="first_may">01 May 2015</string>
    <string name="friday">Friday</string>
    <string name="leave">Leave</string>
    <string name="approved">Approved</string>
    <string name="emp">Employee*</string>
    <string name="team">Team*</string>
    <string name="empproj">Employee Project*</string>
    <string name="transferdate">Transfer Date*</string>
    <string name="assetslist">Assets List*</string>
    <string name="remarks">Remarks</string>
    <string name="tansfer">Transfer</string>
    <string name="assets_request_frm">Asset Request From*</string>
    <string name="trans_from">Transfer From</string>
    <string name="no_of_assest">No Of Assets</string>
    <string name="accept_assets">Accept Asset</string>
    <string name="transferto">Transfer To*</string>
    <string name="admin">Transfer To Admin Stock</string>
    <string name="employee">Transfer To Other Employee</string>
    <string name="assets_report">Asset Report</string>
    <string name="transferAssets">PendingTransferTo</string>
    <string name="issuedate">IssueDate</string>
    <string name="anyremarks">AnyRemark</string>
    <string-array name="acceptreject">
        <item>Accept</item>
        <item>Reject</item>
    </string-array>
    <string name="totalassets">Total Assets</string>
    <string name="transfertype">Transfer Type</string>
    <string name="assetdate">Asset Date</string>
    <string name="view">View</string>
    <string name="accept_reject">Accept/Reject</string>
    <string name="tagno.">Tag No</string>
    <string name="srno.">Serial No</string>
    <string name="category">Category</string>
    <string name="assettype">Asset Type</string>
    <string name="viewtimesheetfor">View Timesheet For</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="travel_km">Travel Km*</string>
    <string name="project_travel_approve">Approve Travel</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="travel_mode">Travel Mode</string>
    <string name="travel_amount">Travel Amount</string>
    <string name="approve_travel_details_traveldate">Travel Date</string>
    <string name="approve_travel_details_location">Location</string>
    <string name="approve_travel_details_transportmode">Travel Mode</string>
    <string name="approve_travel_details_travelunit">Travel Unit</string>
    <string name="approve_travel_details_Pm_approve_unit">PM Approve UnitCost</string>
    <string name="approve_travel_details_Pm_remarks">PM Remarks</string>
    <string name="approve_travel_details_Pm_approve">Approve</string>
    <string name="approve_travel_details_unitcast">UnitCost</string>
    <string name="projname">ProjName</string>
    <string name="travel_location">Location</string>
    <string name="travel_date">TravelDate</string>
    <string name="travel_unit">Unit</string>
    <string name="travel_unit_cost">UnitCost</string>
    <string name="transport_mode_desc">TransportMode Desc</string>
    <string name="approve_unit">ApproveUnit</string>
    <string name="travel_expense_status">Travel Status</string>
    <string name="training_start">Training Start</string>
    <string name="training_end">Training End</string>
    <string name="list_to_complete_btn">Complete</string>
    <string name="training">Training</string>
    <string name="customer">Customer</string>
    <string name="training_place">Training Place</string>
    <string name="training_name">Training Name</string>
    <string name="training_location">Training Location</string>
    <string name="training_duration">Training Duration</string>
    <string name="travel_start">Travel Start</string>
    <string name="travel_end">Travel End</string>
    <string name="cancelation_review">Cancelation Review</string>
    <string name="projectname">Project Name</string>
</resources>