<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/travel_expense_report_projec_name"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/blackcolor"
        android:text="@string/projname"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/travel_expense_report_location"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:textColor="@color/blackcolor"
        android:gravity="center"
        android:text="@string/travel_location"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/travel_expense_report_travel_date"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/blackcolor"
        android:text="@string/travel_date"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/travel_expense_report_unit"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:textColor="@color/blackcolor"
        android:gravity="center"
        android:text="@string/travel_unit"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/travel_expense_report_unit_cost"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/blackcolor"
        android:text="@string/travel_unit_cost"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/travel_expense_report_transportmode_description"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:textColor="@color/blackcolor"
        android:gravity="center"
        android:text="@string/transport_mode_desc"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/travel_expense_report_approve_unit_cost"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:textColor="@color/blackcolor"
        android:gravity="center"
        android:text="@string/approve_unit"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/travel_expense_report_status"
        android:layout_width="0dp"
        android:textColor="@color/blackcolor"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/travel_expense_status"
        android:textSize="12sp" />

</LinearLayout>