<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/gts_view_report_training"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/training"
        android:textColor="@color/textcomman_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/gts_view_report_customer"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/customer"
        android:textColor="@color/textcomman_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/gts_view_report_training_place"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/training_place"
        android:textColor="@color/textcomman_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/gts_view_report_training_date"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/training_duration"
        android:textColor="@color/textcomman_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/gts_view_report_travel_start"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/travel_start"
        android:textColor="@color/textcomman_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/gts_view_report_travel_end"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/travel_end"
        android:textColor="@color/textcomman_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/gts_view_report_status"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/status"
        android:textColor="@color/textcomman_color"
        android:textSize="12sp" />

</LinearLayout>