<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.5"
        android:gravity="center" />

    <TextView
        android:id="@+id/projecttravell1"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="@color/textcomman_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/projecttravell2"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/end"
        android:textColor="@color/textcomman_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/aprojecttravell3"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/location"
        android:textColor="@color/textcomman_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/projecttravell4"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/travel_mode"
        android:textColor="@color/textcomman_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/projecttravell5"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/travel_amount"
        android:textColor="@color/textcomman_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/projecttravell6"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/travel_km"
        android:textColor="@color/textcomman_color"
        android:textSize="12sp" />

</LinearLayout>