<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/checkTime"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:focusable="false"
        android:gravity="center"
        android:textColor="#000" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/date"
        android:textColor="#000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/day"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/day"
        android:textColor="#000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/activity"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/activity"
        android:textColor="#000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/description"
        android:textColor="#000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/status"
        android:textColor="#000"
        android:textSize="12sp" />

</LinearLayout>